# py-muti-scrcpy

./: .buildinfo  .gitignore  .pre-commit-config.yaml  Makefile  README.md  genindex.html  guide.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  scrcpy.html  search.html  searchindex.js
.github/workflows/: ci.yml  codeql-analysis.yml  docs.yml  publish.yml
_modules/: index.html
_modules/scrcpy/: control.html  core.html  muti_core.html
_sources/: index.md.txt
docs/: Makefile
docs/source/: conf.py  guide.md  index.md  scrcpy.md
scrcpy/: __init__.py  control.py  core.py  muti_core.py
scrcpy_ui/: main.py  qt_keymap.py  window_config_edit.py  window_main.py  window_screen.py  window_single.py
scrcpy_ui/scrcpy/: core.py
scripts/: check.py  lint.py
tests/: test_control.py  test_core.py  test_interprocess.py  test_muti_core.py  test_process_worker.py
workers/: __init__.py  process_worker.py  schemas.py  server.py  thread_worker.py  utils.py
