[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "muti-scrcpy-client"
version = "0.8.0"
description = "A multi-device Python client for scrcpy"
authors = [
    { name = "ianvzs", email = "ianvzs@outlook.com" },
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.15"
dependencies = [
    "av>=12.0.0,<18.0.0",
    "opencv-python>=4.5.3,<5.0.0",
    "adbutils>=2.12.0,<3.0.0",
    "pydantic>=1.10.0,<3.0.0",
    "loguru>=0.6.0,<1.0.0",
]

[project.optional-dependencies]
ui = [
    "click>=8.0.0,<9.0.0",
    "PySide6>=6.5.0,<7.0.0",
]
dev = [
    "flake8>=6.0.0,<8.0.0",
    "isort>=5.0.0,<7.0.0",
    "black>=23.0.0,<26.0.0",
    "pre-commit>=3.0.0,<5.0.0",
    "pytest>=7.0.0,<10.0.0",
    "pytest-cov>=4.0.0,<7.0.0",
    "Sphinx>=5.0.0,<9.0.0",
    "myst-parser>=1.0.0,<5.0.0",
    "build>=1.0.0",
    "twine>=5.0.0",
]

[project.scripts]
py-muti-scrcpy = "scrcpy_ui:main"

[project.urls]
Repository = "https://github.com/IanVzs/py-muti-scrcpy"

[tool.hatch.build.targets.wheel]
# scrcpy/scrcpy-server.jar 与 scrcpy_ui/*.ui 等非 .py 资源会随 packages 自动带入。
packages = ["scrcpy", "workers", "scrcpy_ui"]

[tool.hatch.build.targets.sdist]
include = [
    "scrcpy",
    "workers",
    "scrcpy_ui",
    "tests",
    "scripts",
    "docs",
    "README.md",
    "LICENSE.txt",
]

[tool.isort]
profile = "black"
